feature(highlights): added create highlights endpoint added get single novel with highlights [Delivers #167165007]
